<resources>
    <string name="app_name">Funcourt</string>
    <string name="app_id">467349400120385</string>
    <string name="register">Registrieren</string>
    <string name="login">Anmelden</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="or_email">oder per E-Mail</string>
    <string name="hintEmail">E-Mail*</string>
    <string name="hintPassword">Kennwort*</string>
    <string name="hintUsername">Benutzername*</string>
    <string name="requiredFields">Diese Felder sind auszufüllen*</string>
    <string name="confirm">Bestätigen</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile_image">Profil Bild</string>
    <string name="personal_info">Persönliche Daten</string>
    <string name="playerTypeAmateur">Hobby Kicker</string>
    <string name="playerTypeTeam">Vereinsspieler</string>
    <string name="playerTypeFormerTeam">Ehem. Vereinsspieler</string>
    <string name="strong_foot">Starker Fuß</string>
    <string name="left">links</string>
    <string name="right">rechts</string>
    <string name="both">beidbeinig</string>
    <string name="position">Position</string>
    <string name="position_long">Wähle absteigend deine Lieblingsposition</string>
    <string name="strong_foot_long">Wähle deinen starken Fuß</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="create_event">Veranstalung erstellen</string>
    <string name="profile">Profil</string>
    <string name="players">Spieler</string>
    <string name="matchday">Matchday</string>
    <string name="settings">Einstellungen</string>
    <string name="logout">Abmelden</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
