<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_create"
            android:title="@string/create_event" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_other_players"
            android:icon="@drawable/ic_players"
            android:title="@string/players" />
        <item
            android:id="@+id/nav_matchday"
            android:icon="@drawable/ic_matchday"
            android:title="@string/matchday" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>
