<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkBlue"
        android:elevation="7dp"
        android:orientation="vertical"
        android:id="@+id/topWrapper">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:gravity="center"
            style="@style/defaultFont"
            android:textSize="24sp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="33dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#8a8c90"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="13dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginLeft="36dp"
                android:layout_marginRight="42dp"
                android:src="@drawable/ic_fb"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/defaultFont"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginLeft="-91dp"
                android:paddingTop="21dp"
                android:paddingBottom="21dp"
                android:text="Mit Facebook Anmelden"/>
        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/topWrapper">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_email"
            android:gravity="center"
            style="@style/defaultFont"
            android:textSize="10sp"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="28dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#22ffffff"/>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            style="@style/editTextFont"
            android:hint="@string/hintEmail"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#22ffffff"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/editTextFont"
            android:hint="@string/hintPassword"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#22ffffff"/>

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/editTextFont"
            android:hint="@string/hintUsername"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#22ffffff"/>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="13dp"
        android:layout_marginStart="15dp"
        android:text="@string/requiredFields"
        android:fontFamily="sans-serif-light"
        android:layout_above="@+id/btnConfirm" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark20"
        android:layout_above="@+id/btnConfirm" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:text="@string/confirm"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark20"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>